--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js | bunyan",
+    "start": "node index.js -c dev.yaml | bunyan",
+    "startdev": "nodemon index.js -c dev.yaml | bunyan",
     "test": "mocha --require should",
     "watch": "mocha -w --require should | bunyan"
   },
