--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^1.10.3",
+    "eslint-config-probo": "^1.0.2",
     "mocha": "^2.2.4",
     "nock": "^1.6.0",
     "should": "^5.2.0"
