--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bunyan": "^1.4.0",
     "js-yaml": "^3.3.1",
     "oauth": "^0.9.14",
+    "probo-request-logger": "^1.0.1",
     "querystring": "^0.2.0",
     "request": "^2.57.0",
     "restify": "^3.0.3",
